force-app/main/default/objects/Waitlist_Building__c/Waitlist_Building__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between Waitlist and Building.</description>
    <label>Listing Building</label>
    <nameField>
        <displayFormat>WB-{0000}</displayFormat>
        <label>Waitlist Building Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>