force-app/main/default/objects/Waitlist_Building__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Waitlist_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>