force-app/main/default/objects/Waitlist_Building__c/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Address</label>
    <type>Address</type>
</CustomField>