force-app/main/default/objects/Waitlist_Building__c/fields/CMS_URL__c.field-meta.xml
<CustomField>
    <fullName>CMS_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CMS URL</label>
    <type>Url</type>
</CustomField>