force-app/main/default/objects/Waitlist_Building__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NY_Counties</valueSetName>
    </valueSet>
</CustomField>