force-app/main/default/objects/Waitlist_Building__c/fields/Total_3BR_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_3BR_Units__c</fullName>
    <label>Total 3BR Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>