force-app/main/default/objects/Waitlist_Building__c/fields/Total_Mobility_Impairment_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Mobility_Impairment_Units__c</fullName>
    <label>Total Mobility Impairment Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>